@@ -1,5 +1,12 @@
 2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* include/ntos/zwtypes.h (FILE_BASIC_INFORMATION): Use LARGE_INTEGER,
+	not TIME type for time fields.
+	* lib/kernel32/file/copy.c (SetLastWriteTime): Adjust for new type.
+	(CopyFileExW): Ditto.
+
+2003-03-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* include/ntos/types.h (FALSE): Protect with #ifndef FALSE.
 	(TRUE): Protect with #ifndef TRUE.
 
